--- a/EFI/brunch/grub.cfg
+++ b/EFI/brunch/grub.cfg
@@ -1,19 +1,34 @@
+#==============================================================================
+#####		----{time out}----
+#------------------------------------------------------------------------------
 set timeout=3
+#==============================================================================
 
-### load theme
+#==============================================================================
+#####		----{load theme}----
+#------------------------------------------------------------------------------
 source /EFI/brunch/theme.cfg
+#==============================================================================
 
-######## what is txt_grub
-txt_grub=/chromeOS/chromeOS.img.grub.txt
+#==============================================================================
+#####		----{what is txt_grub}----
+#------------------------------------------------------------------------------
+source /EFI/brunch/txt_grub.txt
+#==============================================================================
 
-### menuentry
+#==============================================================================
+#####		----{menuentry}----
+#------------------------------------------------------------------------------
 search --no-floppy --set=root --file $txt_grub
 source $txt_grub
+#==============================================================================
 
-### exit
+#==============================================================================
+#####		----{exit}----
+#------------------------------------------------------------------------------
 yours=/EFI/Yours/Yours_x64.efi
 search --no-floppy --set=root --file $yours
 menuentry "Back to Yours" --class "refind" {
 	chainloader $yours
 }
-
+#==============================================================================
