--- a/EFI/brunch/grub.cfg
+++ b/EFI/brunch/grub.cfg
@@ -1,3 +1,8 @@
+###############################################################################
+#								[grub.cfg]
+#				Configuration file around the EFI Grub2
+###############################################################################
+
 #==============================================================================
 #####		----{time out}----
 #------------------------------------------------------------------------------
@@ -11,9 +16,9 @@ source /EFI/brunch/theme.cfg
 #==============================================================================
 
 #==============================================================================
-#####		----{what is txt_grub}----
+#####		----{case}----
 #------------------------------------------------------------------------------
-source /EFI/brunch/txt_grub.txt
+source /EFI/brunch/case.txt
 #==============================================================================
 
 #==============================================================================
