--- a/EFI/brunch/theme.cfg
+++ b/EFI/brunch/theme.cfg
@@ -1,3 +1,8 @@
+###############################################################################
+#								[theme.cfg]
+#				Configuration file for loading the theme
+###############################################################################
+
 grub_theme=default
 
 loadfont /EFI/brunch/themes/$grub_theme/UbuntuMonoBold28.pf2
