--- a/EFI/brunch/grub/case.cfg
+++ b/EFI/brunch/grub/case.cfg
@@ -8,7 +8,7 @@ CASE=case_1.txt
 #CASE=case_3.txt
 
 #------------------------------------------------------------------------------
-source /EFI/brunch/case/$CASE
+source $prefix/case/$CASE
 
 ###############################################################################
 #                       {README written by Chauncy}
