--- a/EFI/brunch/grub/control.cfg
+++ b/EFI/brunch/grub/control.cfg
@@ -1,23 +1,34 @@
 ###############################################################################
-#                              [grub.cfg]
+#                          [control.cfg]
 #              Configuration file around the EFI Grub2
 ###############################################################################
 
 #==============================================================================
-#####----{screenshot}----
+#####----{load theme}----
 #------------------------------------------------------------------------------
-set prefix=/EFI/brunch/grub
-insmod crscreenshot
+source $prefix/theme.cfg
 #==============================================================================
 
 #==============================================================================
-#####----{time out}----
+#####----{case}----
 #------------------------------------------------------------------------------
-set timeout=5
+source $prefix/case.cfg
 #==============================================================================
 
 #==============================================================================
-#####----{control}----
+#####----{menuentry}----
 #------------------------------------------------------------------------------
-source $prefix/control.cfg
+search --no-floppy --set=root --file $txt_grub
+source $txt_grub
+#==============================================================================
+
+#==============================================================================
+#####----{exit}----
+#------------------------------------------------------------------------------
+back=$prefix/x86_64-efi/minicmd.mod
+search --no-floppy --set=root --file $back
+menuentry "Exit" --class "exit" {
+	insmod $back
+	exit
+}
 #==============================================================================
