--- a/EFI/brunch/grub/theme.cfg
+++ b/EFI/brunch/grub/theme.cfg
@@ -3,10 +3,10 @@
 #              Configuration file for loading the theme
 ###############################################################################
 
-grub_theme=default
+grub_theme=brunch
 
-loadfont /EFI/brunch/themes/$grub_theme/UbuntuMonoBold28.pf2
-set theme=/EFI/brunch/themes/$grub_theme/theme.txt
+loadfont $prefix/fonts/UbuntuMonoBold28.pf2
+set theme=$prefix/themes/$grub_theme/theme.txt
 export theme
 
 set gfxmode=auto,1024x768
