--- a/EFI/brunch/grub/case.cfg
+++ b/EFI/brunch/grub/case.cfg
@@ -3,9 +3,9 @@
 #                           One out of Three
 ###############################################################################
 
-CASE=case_1.txt
-#CASE=case_2.txt
-#CASE=case_3.txt
+CASE=case1-default.txt
+#CASE=case2-custom.txt
+#CASE=case3-menu.lst
 
 #------------------------------------------------------------------------------
 source $prefix/case/$CASE
