--- a/EFI/brunch/grub/control.cfg
+++ b/EFI/brunch/grub/control.cfg
@@ -4,6 +4,12 @@
 ###############################################################################
 
 #==============================================================================
+#####----{screenshot}----
+#------------------------------------------------------------------------------
+insmod crscreenshot
+#==============================================================================
+
+#==============================================================================
 #####----{load theme}----
 #------------------------------------------------------------------------------
 source $prefix/theme.cfg
