--- a/EFI/brunch/grub/case.cfg
+++ b/EFI/brunch/grub/case.cfg
@@ -1,10 +1,10 @@
 ###############################################################################
-#                              [case.txt]
+#                              [case.cfg]
 #                           One out of Three
 ###############################################################################
 
-CASE=case1-default.txt
-#CASE=case2-custom.txt
+CASE=case1-default.cfg
+#CASE=case2-custom.conf
 #CASE=case3-menu.lst
 
 #------------------------------------------------------------------------------
