--- a/EFI/brunch/grub/theme.cfg
+++ b/EFI/brunch/grub/theme.cfg
@@ -6,6 +6,7 @@
 grub_theme=brunch
 
 loadfont $prefix/fonts/UbuntuMonoBold28.pf2
+loadfont $prefix/fonts/terminus-12.pf2
 set theme=$prefix/themes/$grub_theme/theme.txt
 export theme
 
