--- a/EFI/brunch/grub/case/case1-default.cfg
+++ b/EFI/brunch/grub/case/case1-default.cfg
@@ -1,5 +1,5 @@
 ###############################################################################
-#                           [case1-default.txt]
+#                           [case1-default.cfg]
 #------------------------------------------------------------------------------
 #                      [Case 1]----{if it is here}----
 ###############################################################################
