--- a/EFI/brunch/grub/case/case2-custom.conf
+++ b/EFI/brunch/grub/case/case2-custom.conf
@@ -1,5 +1,5 @@
 ###############################################################################
-#                              [case2-custom.txt]
+#                              [case2-custom.conf]
 #------------------------------------------------------------------------------
 #                    [Case 2]----{if it is somewhere else}----
 ###############################################################################
