--- a/EFI/brunch/grub/control.cfg
+++ b/EFI/brunch/grub/control.cfg
@@ -4,12 +4,6 @@
 ###############################################################################
 
 #==============================================================================
-#####----{screenshot}----
-#------------------------------------------------------------------------------
-insmod crscreenshot
-#==============================================================================
-
-#==============================================================================
 #####----{load theme}----
 #------------------------------------------------------------------------------
 source $prefix/theme.cfg
@@ -29,12 +23,18 @@ source $txt_grub
 #==============================================================================
 
 #==============================================================================
+#####----{dino}----
+#------------------------------------------------------------------------------
+dino=$prefix/dino.img
+search --no-floppy --set=root --file $dino
+menuentry "DinoChrome" --class "dino" {
+	linux16 $prefix/memdisk raw
+	initrd16 $dino
+}
+#==============================================================================
+
+#==============================================================================
 #####----{exit}----
 #------------------------------------------------------------------------------
-back=$prefix/x86_64-efi/minicmd.mod
-search --no-floppy --set=root --file $back
-menuentry "Exit" --class "exit" {
-	insmod $back
-	exit
-}
+menuentry "Exit" --class "exit" {exit}
 #==============================================================================
