--- a/EFI/brunch/brunch.cfg
+++ b/EFI/brunch/brunch.cfg
@@ -1,5 +1,5 @@
 ###############################################################################
-#                              [grub.cfg]
+#                           [brunch.cfg]
 #              Configuration file around the EFI Grub2
 ###############################################################################
 
