--- a/EFI/brunch/case.cfg
+++ b/EFI/brunch/case.cfg
@@ -8,7 +8,7 @@ CASE=case1-default.cfg
 #CASE=case3-menu.lst
 
 #------------------------------------------------------------------------------
-source $prefix/case/$CASE
+source ${prefix}/case/${CASE}
 
 ###############################################################################
 #                       {README written by Chauncy}
