--- a/EFI/brunch/grub/grub.cfg
+++ b/EFI/brunch/grub/grub.cfg
@@ -1,40 +1,36 @@
 ###############################################################################
-#                          [control.cfg]
-#              Configuration file around the EFI Grub2
+#                               [grub.cfg]
+#                         to be loaded by normal
 ###############################################################################
 
 #==============================================================================
-#####----{load theme}----
+#####----{display}----
 #------------------------------------------------------------------------------
-source $prefix/theme.cfg
+source ${prefix}/themes/display.cfg
 #==============================================================================
 
 #==============================================================================
 #####----{case}----
 #------------------------------------------------------------------------------
-source $prefix/case.cfg
+source ${cmdpath}/case.cfg
 #==============================================================================
 
 #==============================================================================
 #####----{menuentry}----
 #------------------------------------------------------------------------------
-search --no-floppy --set=root --file $txt_grub
-source $txt_grub
+search --no-floppy --set=root --file ${txt_grub}
+source ${txt_grub}
 #==============================================================================
 
 #==============================================================================
 #####----{dino}----
 #------------------------------------------------------------------------------
-dino=$prefix/dino.img
-search --no-floppy --set=root --file $dino
-menuentry "DinoChrome" --class "dino" {
-	linux16 $prefix/memdisk raw
-	initrd16 $dino
-}
+GAME=${cmdpath}/games
+source ${GAME}/games.cfg
 #==============================================================================
 
 #==============================================================================
 #####----{exit}----
 #------------------------------------------------------------------------------
-menuentry "Exit" --class "exit" {exit}
+menuentry "Exit" --class "exit" --hotkey "esc" {exit}
 #==============================================================================
