--- a/EFI/brunch/grub/themes/display.cfg
+++ b/EFI/brunch/grub/themes/display.cfg
@@ -1,16 +1,27 @@
 ###############################################################################
-#                               [brunch.cfg]
-#                       loaded by [grub2-brunch.efi]
+#                              [display.cfg]
+#                     to load something for display
 ###############################################################################
 
 #==============================================================================
-#####----{time out}----
+#####----{gfx}----
 #------------------------------------------------------------------------------
-set timeout=5
+set gfxmode=auto,1024x768
+set gfxpayload=text
+terminal_output gfxterm
 #==============================================================================
 
 #==============================================================================
-#####----{source}----
+#####----{fonts}----
 #------------------------------------------------------------------------------
-source ${prefix}/grub.cfg
+loadfont Ubuntu_Mono_Bold28
+loadfont Terminus_Regular_12
+#==============================================================================
+
+#==============================================================================
+#####----{theme}----
+#------------------------------------------------------------------------------
+grub_theme=brunch
+set theme=${prefix}/themes/${grub_theme}/theme.txt
+export theme
 #==============================================================================
