--- a/EFI/brunch/grub/grub.cfg
+++ b/EFI/brunch/grub/grub.cfg
@@ -4,33 +4,48 @@
 ###############################################################################
 
 #==============================================================================
+#####----{load_env}----
+#------------------------------------------------------------------------------
+load_env
+#==============================================================================
+
+#==============================================================================
+#####----{lang}----
+#------------------------------------------------------------------------------
+source ${prefix}/locale/translations.cfg
+refresh_lang
+#==============================================================================
+
+#==============================================================================
 #####----{display}----
 #------------------------------------------------------------------------------
 source ${prefix}/themes/display.cfg
+theme_menu
 #==============================================================================
 
 #==============================================================================
-#####----{case}----
+#####----{function}----
 #------------------------------------------------------------------------------
-source ${cmdpath}/case.cfg
+source ${prefix}/brunch.lst
+source ${prefix}/function.cfg
 #==============================================================================
 
 #==============================================================================
-#####----{menuentry}----
+#####----{time out}----
 #------------------------------------------------------------------------------
-search --no-floppy --set=root --file ${txt_grub}
-source ${txt_grub}
+set timeout=${TIME_OUT}
 #==============================================================================
 
 #==============================================================================
-#####----{dino}----
+#####----{mouse}----
 #------------------------------------------------------------------------------
-GAME=${cmdpath}/games
-source ${GAME}/games.cfg
+load_mouse
+${LOAD_USB_MOUSE}
+${LOAD_PS2_MOUSE}
 #==============================================================================
 
 #==============================================================================
-#####----{exit}----
+#####----{menu}----
 #------------------------------------------------------------------------------
-menuentry "Exit" --class "exit" --hotkey "esc" {exit}
+source ${prefix}/menu.lst
 #==============================================================================
