--- a/EFI/brunch/grub/locale/translations.cfg
+++ b/EFI/brunch/grub/locale/translations.cfg
@@ -1,10 +1,13 @@
 ###############################################################################
-#                               [brunch.cfg]
-#                       loaded by [grub2-brunch.efi]
+#                             [translations.cfg]
+#                           used for translations
 ###############################################################################
 
 #==============================================================================
-#####----{source}----
+#####----{功能}----
 #------------------------------------------------------------------------------
-source ${prefix}/grub.cfg
+function refresh_lang {
+	TRANSL=${prefix}/locale/translations
+	source ${TRANSL}/values-${lang}.ini
+}
 #==============================================================================
