--- a/EFI/brunch/grub/themes/display.cfg
+++ b/EFI/brunch/grub/themes/display.cfg
@@ -7,21 +7,26 @@
 #####----{gfx}----
 #------------------------------------------------------------------------------
 set gfxmode=auto,1024x768
-set gfxpayload=text
+set gfxpayload=auto
 terminal_output gfxterm
 #==============================================================================
 
 #==============================================================================
 #####----{fonts}----
 #------------------------------------------------------------------------------
-loadfont Ubuntu_Mono_Bold28
+loadfont  Microsoft_YaHei_Regular_24
+loadfont Microsoft_YaHei_Regular_12
 loadfont Terminus_Regular_12
 #==============================================================================
 
 #==============================================================================
-#####----{theme}----
+#####----{functions}----
 #------------------------------------------------------------------------------
-grub_theme=brunch
-set theme=${prefix}/themes/${grub_theme}/theme.txt
-export theme
+function theme_menu {
+	export theme=${prefix}/themes/brunch/theme.txt
+}
+#------------------------------------------------------------------------------
+function theme_vtoyfm {
+	export theme=${prefix}/themes/brunch/vtoyfm.txt
+}
 #==============================================================================
