--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,7 @@ jobs:
         cd ${{ matrix.repo }}
         ls -l
         sudo bash ./${{ matrix.repo }}.sh
+        sudo mv grub-mkimage.efi ${{ matrix.repo }}.efi
 
     - name: 归档 ${{ matrix.repo }}
       run: |
