--- a/.github/workflows/构建.yml
+++ b/.github/workflows/构建.yml
@@ -4,14 +4,14 @@ on:
   push:
     branches: [ "main" ]
     paths:
-      - '.github/workflows/build.yml'
+      - '.github/workflows/构建.yml'
       - 'cmdpath/**'
       - 'grub-mkimage/**'
       - 'memdisk/**'
   pull_request:
     branches: [ "main" ]
     paths:
-      - '.github/workflows/build.yml'
+      - '.github/workflows/构建.yml'
       - 'cmdpath/**'
       - 'grub-mkimage/**'
       - 'memdisk/**'
